(executable
 (name pp)
 (modules pp)
 (libraries ppx_rapper ppxlib))

(rule
 (targets test.actual.ml)
 (deps
  (:pp pp.exe)
  (:input test.ml))
 (action
  (with-outputs-to
   %{targets}
   (pipe-stdout
    (run ./%{pp} --impl %{input})
    (run ocamlformat --exp-grouping=preserve --impl -)))))

(rule
 (alias runtest)
 (deps
  (file test.expected.ml)
  (file test.actual.ml))
 (action
  (diff test.expected.ml test.actual.ml)))
